Closed Bug 1409541 Opened 7 years ago Closed 7 years ago

ArrayData fixes

Categories

(Core :: Disability Access APIs, defect)

Unspecified
Windows
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla58
Tracking Status
firefox57 --- verified
firefox58 --- verified

People

(Reporter: bugzilla, Assigned: bugzilla)

References

Details

(Whiteboard: aes+)

Attachments

(1 file)

We should make some improvements to sPlatformChildArrayData that will help with both perf and correctness. In particular, we should get rid of any instances of mArrayParamIid == IID_IUnknown and use the expected IID instead. Also I think we're missing an entry for IAccessibleTable2::get_selectedCells.
This patch adds a missing ArrayData entry for IAccessibleTable2::get_selectedCells. It also replaces all occurrences of IID_IUnknown with the real, expected interface IIDs (The field in question represents the IID of the interface in the output array). See ipc/mscom/Registration.h for the declaration of the ArrayData structure.
Attachment #8919481 - Flags: review?(jteh)
Comment on attachment 8919481 [details] [diff] [review] Fixes to array data Looks good! I think it'd be useful to have comments on the indexes indicating the method/argument names, since counting them is tedious and error prone (unless you know of some more automated way that I don't?). However, this code already existed, so that's not so much a comment on this patch and more of a reminder to consider this for future stuff like this. Thanks!
Attachment #8919481 - Flags: review?(jteh) → review+
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/1ee54768edd3 Replace IID_IUnknown with expected interfaces for outparams in a11y content ArrayData. r=Jamie
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
I haven't crashed all day using NVDA on big pages. Seems fixed. Marking accordingly.
Status: RESOLVED → VERIFIED
Hi Aaron, would you consider uplifting the fix for bug 1409541 to beta57? I don't see any crash reports on 57 in the last 7 days. Given that, should we just wontfix Bug 1410407 for 57?
Flags: needinfo?(aklotz)
This is a dependency of bug 1406822 which has an uplift request. If we decide to uplift that, then this bug will need to ride along too.
Flags: needinfo?(aklotz)
Comment on attachment 8919481 [details] [diff] [review] Fixes to array data Got it. Thanks Aaron. This fix is needed to fix 57 blocking bug 1406822, beta57+
Attachment #8919481 - Flags: approval-mozilla-beta+
Verified fixed using 57.b13 on Windows 10 x64 and Windows 7 x64.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: