Bug 1409541 - Replace IID_IUnknown with expected interfaces for outparams in a11y content ArrayData. r=Jamie, a=ritu

MozReview-Commit-ID: 4t0h8zH2hsB